--- a/css/help.css
+++ b/css/help.css
@@ -34,7 +34,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd, 
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
@@ -66,8 +66,9 @@ body {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 9pt;
 }
-ol, ul {
-  list-style: none;
+
+li{
+  display: list-item
 }
 blockquote, q {
   quotes: none;
